feat: Enhance security and authentication flow with detailed documentation and improved error handling